style/styles.css
.contribution-graph {
	position: relative;
	width: 100%;
	padding: var(--size-4-1);
}

.contribution-graph .center {
	justify-content: center;
	text-align: center;
}

.contribution-graph .main {
	line-height: normal;
	display: grid;
	justify-content: center;
	border-radius: var(--radius-s);
	padding: var(--size-4-2) var(--size-4-1);
	cursor: auto;
}

.contribution-graph .main.shadow {
	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
}

.theme-dark .contribution-graph .main.shadow {
	box-shadow: inset 0 0 0.5px 1px hsla(0, 0%,
			100%, 0.075),
		/* shadow ring 👇 */
		0 0 0 1px hsla(0, 0%, 0%, 0.05),
		/* multiple soft shadows 👇 */
		0 0.3px 0.4px hsla(0, 0%, 0%, 0.02),
		0 0.9px 1.5px hsla(0, 0%, 0%, 0.045),
		0 3.5px 6px hsla(0, 0%, 0%, 0.09);
}

.contribution-graph .main.fill-the-screen {
	justify-content: unset;
}

.contribution-graph .main .title {
	font-size: 14px;
	margin-bottom: 36px;
	justify-content: flex-start;
}

.contribution-graph .main .charts {
	width: 100%;
	display: flex;
	overflow-x: hidden;
}

.contribution-graph .main .charts:hover {
	overflow-x: auto;
}

.contribution-graph .main .charts .column {
	position: relative;
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

.contribution-graph .main .charts .row {
	position: relative;
	display: flex;
	flex-direction: row;
	flex-grow: 1;
	align-items: flex-start;
	justify-content: space-between;
	margin-bottom: 6px;
	width: 100%;
}

/**
*  default charts
*/
.contribution-graph .main .charts.default {
	flex-direction: row;
	align-items: flex-start;
	flex-wrap: nowrap;
	justify-content: flex-start;
	padding-left: var(--size-4-2);
	padding-right: var(--size-4-2);
}

.contribution-graph .main .charts.default .column {
	margin-top: 1.6rem;
	/* override default flex-grow */
	flex-grow: 0;
}

.contribution-graph .fill-the-screen.main .charts.default .column {
	margin-top: 1.6rem;
	flex-grow: 1;
}

.contribution-graph .default .week-indicator {
	background-color: transparent;
	font-size: 10px;
	min-width: 18px;
	text-wrap: nowrap;
	height: 8px;
	margin-right: 8px;
	margin-top: 1.5px;
	text-align: center;
	cursor: pointer;
}

.contribution-graph .default .month-indicator {
	position: absolute;
	top: -24px;
	text-wrap: nowrap;
	font-size: 10px;
	min-width: 20px;
	cursor: pointer;
}

/**
* month-track charts
*/
.contribution-graph .main .charts.month-track {
	flex-direction: column;
	align-items: flex-start;
	padding-right: 12px;
	width: 100%;
}

.contribution-graph .month-track .cell.date-indicator {
	font-size: 8px;
	width: auto;
	border-radius: 2px;
	margin-right: 2px;
	flex-grow: 1;
}

.contribution-graph .main .charts.month-track .row {
	width: auto;
	align-items: flex-start;
	margin-bottom: 8px;
	gap: 1px;
}

.contribution-graph .main.fill-the-screen .charts.month-track .row {
	width: 100%;
	align-items: flex-start;
	margin-bottom: 8px;
	gap: 1px;
}

.contribution-graph .month-track .cell {
	min-height: 13px;
	min-width: 13px;
	font-size: 10px;
	border-radius: 3px;
}

@media (max-width: 720px) {
	.contribution-graph .month-track .cell {
		height: 10px;
		min-height: 10px;
		min-width: 10px;
		font-size: 10px;
		border-radius: 3px;
	}
}

.contribution-graph .month-track .month-indicator {
	background-color: transparent;
	font-size: 12px;
	height: 22px;
	min-width: 77px;
	margin-right: 12px;
	text-align: right;
	cursor: pointer;
	top: auto;
	position: relative;
	color: var(--text-normal);
}

/* calendar charts */
.contribution-graph .main .charts.calendar {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	padding: 0.5rem 1rem;
	gap: 2rem;
	overflow-x: auto;
	max-width: 1000px;
}

.contribution-graph .calendar .month-container {
	min-width: calc(25% - 2rem);
	padding: 0.2rem 0.33rem;
	position: relative;
	border-width: 1px;
	border-style: solid;
	border-color: transparent;
	border-radius: 5px;
	justify-content: space-between;
}

.contribution-graph .calendar .month-container:hover {
	border: 1px solid var(--background-modifier-border-hover);
	border-color: transparent;
	background-color: rgba(244, 244, 244, 0.6);
}

.theme-dark .contribution-graph .calendar .month-container:hover {
	border: 1px solid var(--background-modifier-border-hover);
	background-color: rgba(37, 35, 35, 0.3);
}

.contribution-graph .calendar .month-container .month-indicator {
	width: 100%;
	text-align: center;
	cursor: pointer;
	color: var(--text-normal);
	font-size: 0.8rem;
}

.contribution-graph .calendar .month-container .month-indicator:hover {
	opacity: 0.6;
}

.contribution-graph .calendar .month-container .week-indicator-container {
	margin-top: 12px;
}

.contribution-graph .main .calendar .month-container .row {
	gap: 0.6rem;
	justify-content: center;
}

.contribution-graph .calendar .month-container .week-indicator-container .cell.week-indicator {
	font-size: 0.6rem;
	line-height: 1.5;
	text-align: center;
	color: var(--text-muted);
}

.contribution-graph .main .calendar .month-container .cell {
	min-width: 8px;
	min-height: 8px;
	width: 8px;
	height: 8px;
	font-size: 8px;
	border-radius: 2px;
	margin-top: 0px;
	margin-right: 0px;
	flex-grow: 0;
	display: flex;
	align-items: center;
}

.contribution-graph .main.fill-the-screen .calendar .month-container .cell {
	flex-grow: 1;
}

/* default cell */
.contribution-graph .cell {
	min-width: 8.8px;
	min-height: 8.8px;
	height: 8.8px;
	font-size: 8px;
	border-radius: 2px;
	background-color: transparent;
	margin-top: 2px;
	margin-right: 2px;
	flex-grow: 1;
	cursor: pointer;
	position: relative;
	display: flex;
	justify-content: center;
	align-items: center;
}

.contribution-graph .cell:hover {
	opacity: 0.6;
}

.contribution-graph .cell.empty {
	background-color: rgba(235, 237, 240, 0.85);
}

.theme-dark .contribution-graph .cell.empty {
	background: rgba(71, 71, 71, 0.6);
}

.color-indicator {
	height: 18px;
	width: 18px;
	border-radius: 50%;
	border-width: 1px;
	border-color: var(--background-modifier-border);
	border-style: solid;
}
/* ... */

